--- a/main.css
+++ b/main.css
@@ -17,8 +17,7 @@ body {
     webkit-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
     -moz-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
     box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
-    height: 100px;
-    width: 100px;
+    height: 100%;
     background-color: white;
     padding: 1em;
     border-radius: 1em;
