--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 .container {
     webkit-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
