--- a/main.css
+++ b/main.css
@@ -4,20 +4,17 @@
     margin:0;
 }
 body {
-    height: 100%;
-    background: hsl(212, 45%, 89%);
-}
-.hero {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    height: calc(100vh - 1px);
+    background: hsl(212, 45%, 89%);
 }
 .container {
     webkit-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
     -moz-box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
     box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.05);
-    height: 100%;
     background-color: white;
     padding: 1em;
     border-radius: 1em;
@@ -47,12 +44,6 @@ body {
     margin-top: 1em;
 }
 @media only screen and (min-width: 1440px) {
-    body {
-        height: 100vh;
-        display: grid;
-        place-items: center;
-        margin: 0;
-    }
     .container {
         margin: auto;
         width: 45%;
